--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
             <!--proyecto 2-->
             <div class="col-md-4">
-              <a href="https://fit-connect.herokuapp.com/">
+              <a href="https://github.com/PaulinaGomez/fit-connect">
                 <div class="card">
                   <img
                     class="card-img-top"
